fixed some mobile styling in safari on mobile in the footer

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -131,7 +131,9 @@ body {
 	align-items: flex-start;
 	background-color: #2b2b2b;
 	color: #AAA6AB;
-	height: 100%;
+	position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 .bottom_nav_left {
 	-webkit-order: 0;
@@ -239,5 +241,8 @@ body {
 		}
 		.bottom_nav_left {
 		margin-left:10vh;
-	}
+		}
+		.nav_button_bottom {
+			width: auto;
+		}
 }
